...
                workoutName: "Squats",
                presentingAccount: .constant(false),
                selectedWeek: 1,
                selectedDay: 1
            ),
            title: "Squats",
            video: "squats"
        ),
        MenuItem(
            view: WorkoutInputForm(
                workoutName: "Row",
                presentingAccount: .constant(false),
                selectedWeek: 1,
...
                            selectedDay: selectedDay
                        )
                    }
                    
                    Spacer()
                    NavigationLink(destination: WorkoutHome(presentingAccount: $presentingAccount)) {
                        Text("Enter Missed Workout")
                            .foregroundColor(.primary)
                            .padding()
//                            .frame(width: totalWidth)
                            .background(Color.blue)
                            .cornerRadius(8)
                    }
...
