...
                }
//                .id(UUID())

            WorkoutSelection(presentingAccount: $presentingAccount)
                .tag(Tabs.workout)
                .tabItem {
                    Label("Workout", systemImage: "dumbbell.fill") // change icon later
                }
            // TabViewChatWindow()
            ProteinTrackerOptions()
                .tag(Tabs.foodClassifierApp)
                .tabItem {
                    Label("Food Tracking", systemImage: "fork.knife")
...
