...
    },
    "ACCOUNT_NEXT" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next"
          }
        }
      }
    },
    "ACCOUNT_SETUP_DESCRIPTION" : {
      "localizations" : {
...
    "ACCOUNT_TITLE" : {
      "comment" : "MARK: Account",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your Account"
          }
        }
      }
    },
    "ADD_DATE" : {
      "localizations" : {
...
    "Choose from Library" : {

    },
    "Classification" : {

    },
    "Close" : {

    },
    "CLOSE" : {
      "comment" : "MARK: General",
      "localizations" : {
        "en" : {
...
    "Female" : {

    },
    "Finish Logging" : {

    },
    "Food Image Classifier" : {

    },
    "Food Logged" : {

    },
    "Food Tracking" : {

    },
    "FOOD_TAB_TITLE" : {
      "comment" : "MARK: - Food",
      "extractionState" : "stale",
      "localizations" : {
...
    "HOME_TAB_TITLE" : {
      "comment" : "MARK: - Home",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
          }
        }
      }
    },
    "How to estimate" : {

...
    "image" : {

    },
    "Incomplete" : {

    },
    "Input with Camera" : {

    },
    "Input with ChatBot" : {

    },
    "INTERESTING_MODULES_AREA1_DESCRIPTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
    },
    "INTERESTING_MODULES_AREA1_TITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pro-Bot"
          }
        }
      }
    },
    "INTERESTING_MODULES_AREA2_DESCRIPTION" : {
      "localizations" : {
...
    },
    "LICENSE_INFO_TITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "License Information"
          }
        }
      }
    },
    "Log %@" : {

...
    "Please select Exercise Date" : {

    },
    "Please select week." : {

    },
    "Please sign-in to continue your Stronger journey" : {

    },
    "Populate with previous workout data" : {

    },
    "portion size?" : {

    },
    "Pro-Bot" : {

    },
    "ProBot" : {

    },
    "PROJECT_LICENSE_DESCRIPTION" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
        }
      }
    },
    "Protein intake (grams)" : {

    },
    "Protein Intake Data" : {

    },
    "Protein intake in the last 7 days" : {

    },
    "Repository Link" : {
...
    "Select Day" : {

    },
    "Select Difficulty" : {

    },
    "Select or Take Picture" : {

    },
    "Select Resistance" : {

    },
    "Select Week to input results" : {
...
    "Video Placeholder" : {

    },
    "Week %lld" : {

    },
    "Weekly Stats" : {

    },
    "WEIGHT" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
...
    "What would you like to do next?" : {

    },
    "Woman working out" : {

    },
    "Workout" : {

    },
    "Workout Home" : {

    },
    "Workout Selection" : {
...
