...
    @Environment(Account.self) var account
    // Array to store average difficulties for each day
    
    var body: some View {
        VStack {
            HStack {
                workoutButton("Workout 1", tab: Tabs.workout)
                workoutButton("Workout 2", tab: Tabs.workout)
                workoutButton("Workout 3", tab: Tabs.workout) // Apply background color
            }
            .onAppear {
                fetchDocuments(week: value)
            }
...
